--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My All Practice Website </title>
+    <title> Prothomalo.com </title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
@@ -1144,7 +1144,7 @@
             <div class="footer__content">
                 <div class="logo">
                     <img src="img/trust_icon.png" alt="" class="logo-img">
-                    <p>porothomalo.com</p>
+                    <p>prothomalo.com</p>
                 </div>
                 <div class="footer__menu--content">
                     <div class="footer__menu--version">
